--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Emotion GIFs</title>
+		<title>GIF Finder</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/reset.css">
 	</head>
 	<body>
 		<div id="wrapper">
 			<div id="buttonsView"></div>
-			<input type="text" id="input"><br><br>
-			<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
+				<input type="text" id="input"><br><br>
+				<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
 			<div id = "gif"></div><br>
-		</div>
-		<script src='http://code.jquery.com/jquery-2.1.3.min.js'>
-		</script>
+		</div>	
+		<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
 		<script src="script.js"></script>
 	</body>
 </html>
