--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
 			<div id = "gif"></div><br>
 		</div>	
-		<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
