--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="wrapper">
+			<h1 id="title">GIF Finder</h1>
 			<div id="buttonsView"></div>
 				<input type="text" id="input"><br><br>
 				<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
