--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 	<body>
 		<div id="wrapper">
 			<h1 id="title">GIF Finder</h1>
+			<p id = "directions">Click one of the buttons below to see GIFs related to that emotion! Or add your own emotion in the box below!</p>
 			<div id="buttonsView"></div>
-				<input type="text" id="input"><br><br>
-				<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
+				<div id= "addSection">
+					<input type="text" id="input"><br><br>
+					<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
+				</div>	
 			<div id = "gif"></div><br>
 		</div>	
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
