--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>GIF Finder</title>
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" a href="css/style.css">
+		<link rel="stylesheet" a href="css/reset.css">
 	</head>
 	<body>
 		<div id="wrapper">
