--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>GIF Finder</title>
-		<link rel="stylesheet" a href="style.css">
-		<link rel="stylesheet" a href="reset.css">
+		<link rel="stylesheet" a href="./assets/css/style.css">
+		<link rel="stylesheet" a href="./assets/css/reset.css">
 	</head>
 	<body>
 		<div id="wrapper">
@@ -13,10 +13,10 @@
 				<div id= "addSection">
 					<input type="text" id="input"><br><br>
 					<input id="addEmotion" type="submit" value="Add an Emotion"><br><br>
-				</div>	
+				</div>
 			<div id = "gif"></div><br>
-		</div>	
+		</div>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="script.js"></script>
+		<script src="./assets/javascript/script.js"></script>
 	</body>
 </html>
